examples/test/testpolicy834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy834
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key42: value29
      key12: value13
      key15: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value22
          key49: value48
          key33: value48
      podSelector:
        matchLabels:
          key16: value30
          key38: value44
